--- a/CreateMonster/app/src/main/res/values/strings.xml
+++ b/CreateMonster/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Creaturemon</string>
+    <string name="app_name">Sample Project</string>
     <string name="avatar">Avatar</string>
     <string name="tap_to_set_avatar">Tap to set avatar</string>
     <string name="intelligence">Intelligence</string>
@@ -14,4 +14,5 @@
     <string name="clear_all_creatures">Clear All Creatures</string>
     <string name="add_creature">Add Creature</string>
     <string name="title_activity_all_creatures">all_creatures</string>
+    <string name="title_activity_creature">creature</string>
 </resources>
